refactor and cleanup. not perfect but it'll do